k8s/production/default-deny-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-default-deny
  namespace: switching
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
